# v5rtmod

./: CMakeLists.txt  README.md
VEXcodeDesktop/: CMakeLists.txt  README.md  VEXcodeDesktop.v5code
VEXcodeDesktop/src/: main.cpp
VEXcodeDesktop/vex/libv5rt/include/: v5_api.h  v5_apiuser.h  v5_color.h  vex_color.h  vex_competition.h  vex_controller.h  vex_device.h  vex_global.h  vex_imu.h  vex_mevent.h  vex_motor.h  vex_motorgroup.h  vex_rotation.h  vex_task.h  vex_thread.h  vex_timer.h  vex_triport.h  vex_vision.h
VEXcodeDesktop/vex/libv5rt/lib/: v5rtmod.lib
include/: v5.h  v5_apiprivate.h  v5_apitypes.h  v5_cpp.h  vex_brain.h  vex_console.h  vex_drivetrain.h  vex_event.h  vex_smartdrive.h  vex_units.h  vex_vexlink.h
src/: v5_api.cpp  v5_apiuser.cpp  vex_brain.cpp  vex_color.cpp  vex_competition.cpp  vex_console.cpp  vex_controller.cpp  vex_device.cpp  vex_drivetrain.cpp  vex_event.cpp  vex_global.cpp  vex_imu.cpp  vex_mevent.cpp  vex_motor.cpp  vex_motorgroup.cpp  vex_rotation.cpp  vex_smartdrive.cpp  vex_task.cpp  vex_thread.cpp  vex_timer.cpp  vex_triport.cpp  vex_vexlink.cpp  vex_vision.cpp
